<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="studio.papercube.ngdownloader.activities.MainActivity">
    <item android:id="@+id/action_options_menu"
          android:title="@string/action_options_menu"
          android:orderInCategory="100"
          app:showAsAction="never" android:enabled="true">
        <menu>
            <item android:id="@+id/option_file_name_id_only"
                  android:title="@string/option_file_name_id_only"
                  android:checkable="true"/>
        </menu>
    </item>
    <item android:id="@+id/action_download_daily"
          android:title="@string/action_download_daily"
          android:orderInCategory="100"
          app:showAsAction="never" android:enabled="true"/>
</menu>
